@@ -98,18 +98,22 @@ class WC_REST_Stripe_Account_Controller extends WC_Stripe_REST_Base_Controller {
 	public function get_account_summary() {
 		$account = $this->account->get_cached_account_data();
 
-		return [
-			'has_pending_requirements' => $this->account->has_pending_requirements(),
-			'has_overdue_requirements' => $this->account->has_overdue_requirements(),
-			'current_deadline'         => $account['requirements']['current_deadline'] ?? null,
-			'status'                   => $this->account->get_account_status(),
-			'statement_descriptor'     => $account['settings']['payments']['statement_descriptor'] ?? '',
-			'store_currencies'         => [
-				'default'   => $account['default_currency'] ?? '',
-				'supported' => $this->account->get_supported_store_currencies(),
-			],
-			'country'                  => $account['country'] ?? '',
-		];
+		return new WP_REST_Response(
+			[
+				'has_pending_requirements' => $this->account->has_pending_requirements(),
+				'has_overdue_requirements' => $this->account->has_overdue_requirements(),
+				'current_deadline'         => $account['requirements']['current_deadline'] ?? null,
+				'status'                   => $this->account->get_account_status(),
+				'statement_descriptor'     => $account['settings']['payments']['statement_descriptor'] ?? '',
+				'store_currencies'         => [
+					'default'   => $account['default_currency'] ?? get_woocommerce_currency(),
+					'supported' => $this->account->get_supported_store_currencies(),
+				],
+				'country'                  => $account['country'] ?? WC()->countries->get_base_country(),
+				'is_live'                  => $account['charges_enabled'] ?? false,
+				'test_mode'                => WC_Stripe_Webhook_State::get_testmode(),
+			]
+		);
 	}
 
 	/**
