@@ -130,6 +130,9 @@ If you get stuck, you can ask for help in the Plugin Forum.
 
 = 6.x.x - 2022-xx-xx =
 * Tweak - Use the newly exposed LoadableMask component provided by WooCommerce Blocks to trigger the loading state for Payment Request Buttons.
+* Fix - Response type for account summary API.
+* Fix - Invalid response in account summary API when missing account data.
+* Add - Live and test mode information in account summary API.
 * Add - Add filter call when updating an existent intent (wc_stripe_update_existing_intent_request).
 * Add - Add ability to test Stripe account keys' validity.
 * Fix - Fixed full bank statement field description.
